--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="start_btn">start</string>
+    <string name="end_btn">end</string>
+    <string name="title_activity_hander_thread_test">HanderThreadTest</string>
 </resources>
